content add to pages

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/logo512.png" />
-    <title>TrainwithAmandaJane</title>
+    <title>The Athletic Performer - Train with Amanda Jane</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
