--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <title>Forever Fitness - Train with Amanda Jane</title>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Train with Amanda Jane",
+  "image": "https://trainwithamandajane.com/AmandaPushuplook.jpg",
+  "description": "Certified personal trainer offering customized workout plans and wellness coaching.",
+  "url": "https://trainwithamandajane.com",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Brooklyn",
+    "addressRegion": "NY",
+    "addressCountry": "US"
+  },
+  "priceRange": "$$",
+  "founder": {
+    "@type": "Person",
+    "name": "Amanda Jane Snyder",
+    "jobTitle": "Certified Personal Trainer"
+  },
+  "sameAs": [
+    "https://www.instagram.com/trainwithamandajane",
+    "https://www.facebook.com/trainwithamandajane"
+  ]
+}
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
