Optimize performance: convert testimonial images to .webp, add lazy loading, set explicit image dimensions, removal of materialize

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+    <link rel="preload" as="image" href="/AmandaPushuplook.webp" type="image/webp" fetchpriority="high">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Certified personal trainer Amanda Jane offers customized fitness programs, nutrition coaching, and wellness in a supportive and empowering environment. Start your journey today!" />
