--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
-    <link rel="preload" as="image" href="/AmandaPushuplook.webp" type="image/webp" fetchpriority="high">
+    <link rel="icon" href="%PUBLIC_URL%/logos/favicon.ico?v=2" />
+    <link rel="preload" as="image" href="/images/AmandaPushuplook.webp" type="image/webp" fetchpriority="high">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@300;400;700&family=Oswald:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Certified personal trainer Amanda Jane offers customized fitness programs, nutrition coaching, and wellness in a supportive and empowering environment. Start your journey today!" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/logos/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/logos/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Forever Fitness - Train with Amanda Jane</title>
     <script type="application/ld+json">
