--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logos/favicon.ico?v=2" />
     <link rel="preload" as="image" href="/images/AmandaPushuplook.webp" type="image/webp" fetchpriority="high">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@300;400;700&family=Oswald:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Certified personal trainer Amanda Jane offers customized fitness programs, nutrition coaching, and wellness in a supportive and empowering environment. Start your journey today!" />
@@ -15,6 +12,88 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/logos/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>Forever Fitness - Train with Amanda Jane</title>
+
+    <!-- Self-hosted fonts -->
+    <style>
+      @font-face {
+  font-family: 'Bebas Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/BebasNeue/bebas-neue-v14-latin-regular.woff2') format('woff2'),
+ 
+}
+
+/* Roboto */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-700.woff2') format('woff2'),
+}
+
+/* Oswald */
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-700.woff2') format('woff2'),
+}
+
+/* Lato */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-700.woff2') format('woff2'),
+}
+    </style>
+
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
